# PacketSentry

./: .gitignore  CMakeLists.txt  README.md
include/: fast_path.h  live_capture.h  statistics_aggregator.h
packet-dashboard/: package-lock.json  package.json
packet-dashboard/src/app/: page.tsx
packet-dashboard/src/app/api/data/: route.ts
src/: fast_path.cpp  live_capture.cpp  load_balancer.cpp  main.cpp  pcap_reader.cpp  statistics_aggregator.cpp  types.cpp
